Added MathQuiz method but not in working order yet

--- a/TheMaze/TheMaze.csproj
+++ b/TheMaze/TheMaze.csproj
@@ -9,6 +9,9 @@
     <None Update="Level1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="TitleMenu.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
