--- a/TheMaze/TheMaze.csproj
+++ b/TheMaze/TheMaze.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Update="Level1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
